WCAG: "Mest brugte selvbetjeninger" text white on hover, for correct contrast

--- a/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/02-molecules/inline-navigation-item/inline-navigation-item.css
+++ b/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/02-molecules/inline-navigation-item/inline-navigation-item.css
@@ -292,6 +292,12 @@
         background-color: var(--color-cta);
         color: var(--color-white);
 
+        & h2 {
+          color: var(--color-white);
+          transition: all .3s ease;
+
+        }
+
         .inline-navigation-item__arrow {
           background-color: var(--color-white);
 
